# Mathics3-Package-Combinatorica

./: .gitignore  CombinatoricaV2.0.0.m  Makefile  README.rst  pyproject.toml
.github/workflows/: ubuntu.yml
Combinatorica/: CombinatoricaV0.9.m  CombinatoricaV06.m  CombinatoricaV091.m  CombinatoricaV2.0.0.m  CombinatoricaV201.m
Combinatorica/Kernel/: init.m
test/: test_combinatorica_v09.py  test_combinatorica_v091.py  test_combinatorica_v20.py  test_combinatorica_v201.py
