[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
description = "Implementing Discrete Mathematics: Combinatorics and Graph Theory with Mathematica"
dependencies = [
    "Mathics3 >= 9.0.0",
]
license = {text = "GPL"}
name = "Mathics3-Package-Combinatorica"
requires-python = ">=3.10"
readme = "README.rst"
keywords = ["Mathematica", "Wolfram", "Interpreter", "Shell", "Math", "CAS"]
maintainers = [
    {name = "Mathics Group", email = "mathics-devel@googlegroups.com"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Interpreters",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mathics.org/"
Downloads = "https://github.com/Mathics3/Mathics3-Packages-Combinatorica/releases"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
[tool.setuptools.package-data]
"mathics" = [
    "packages/*/*.m",
    "packages/*/Kernel/init.m",
]

[tool.mypy]
force_union_syntax = true

ignore_errors = true
